--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 body {
     background-color: green;
     font-family: 'Courgette', cursive;
-    font-size: 100%;
 }
 div {
-    font-size: 3rem;
+    font-size: 5vw;
 }
 
 .text-center {
-    font-size: 20rem;
+    font-size: 10vw;
 }
