--- a/style.css
+++ b/style.css
@@ -11,3 +11,17 @@ i {
 #foot {
     rotate: 180deg;
 }
+
+#deck {
+    background-image: url("img/decksback.jpg");
+    background-color: black;
+    background-size: cover; 
+    background-position: center;
+}
+
+#down {
+    background-image: url("img/decksback.jpg");
+    background-color: black;
+    background-size: cover; 
+    background-position: center;
+}
